Fixed screen overflow for descri ption

--- a/src/components/ContactCard/ContactCard.module.css
+++ b/src/components/ContactCard/ContactCard.module.css
@@ -9,13 +9,14 @@
     padding-top: 40px;
     padding-left: 40px;
     padding-right: 40px;
-    gap: 60px;
+    gap: 20px;
+    flex-wrap: wrap; 
 }
 
 .textContainer {
     display: flex;
     flex-direction: column;
-    gap:25px;
+    gap:20px;
 }
 
 .contactImg {
